--- a/src/main/resources/fxml/AdministradorView.fxml
+++ b/src/main/resources/fxml/AdministradorView.fxml
@@ -32,10 +32,12 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -43,39 +45,75 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2c2c2c;" VBox.vgrow="ALWAYS">
          <children>
-            <ImageView fx:id="LogoDoApp" fitHeight="130.0" fitWidth="150.0" layoutX="45.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../images%20scenebuilder/LogoApp.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="BSairDoApp" layoutX="737.0" layoutY="60.0" mnemonicParsing="false" style="-fx-background-color: #e5a000; -fx-background-radius: 50; -fx-padding: 18 18;">
-               <graphic>
-                  <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" x="50.0">
-                     <image>
-                        <Image url="@../../../../../../images%20scenebuilder/IconeBotaoDeSair.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
-            <Button fx:id="BListarUsuarios" layoutX="200.0" layoutY="225.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="BPromoverUsuario" layoutX="200.0" layoutY="305.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="BRebaixarUsuario" layoutX="200.0" layoutY="385.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="BRemoverUsuario" layoutX="200.0" layoutY="465.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Button>
+            <VBox alignment="CENTER" prefHeight="700.0" prefWidth="900.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="186.0" prefWidth="900.0">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/dumbbells%201.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets left="10.0" right="200.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" opacity="0.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(2)%201.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets right="200.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <AnchorPane prefHeight="138.0" prefWidth="150.0">
+                           <children>
+                              <ImageView fitHeight="150.0" fitWidth="165.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="18.0">
+                                 <image>
+                                    <Image url="@../images/Design%20sem%20nome%20(6)%201.png" />
+                                 </image>
+                              </ImageView>
+                              <Button fx:id="sairB" layoutX="3.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="142.0" prefWidth="143.0" style="-fx-background-color: transparent;" text="" />
+                           </children>
+                        </AnchorPane>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="80.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <Button fx:id="BListarUsuarios" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="20.0" top="20.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="BPromoverUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000">
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="BRebaixarUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000">
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="BRemoverUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000">
+                     <VBox.margin>
+                        <Insets bottom="120.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+               </children>
+            </VBox>
          </children>
     </AnchorPane>
   </children>
