--- a/src/main/resources/fxml/AdministradorView.fxml
+++ b/src/main/resources/fxml/AdministradorView.fxml
@@ -1,37 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-  Copyright (c) 2015, 2019, Gluon and/or its affiliates.
-  All rights reserved. Use is subject to license terms.
-
-  This file is available and licensed under the following license:
-
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions
-  are met:
-
-  - Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
-  - Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in
-    the documentation and/or other materials provided with the distribution.
-  - Neither the name of Oracle Corporation nor the names of its
-    contributors may be used to endorse or promote products derived
-    from this software without specific prior written permission.
-
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
@@ -42,8 +10,8 @@
 <?import javafx.scene.text.Font?>
 
 <VBox prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.ui.controller.AdministradorViewController">
-  <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2c2c2c;" VBox.vgrow="ALWAYS">
+   <children>
+      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2c2c2c;" VBox.vgrow="ALWAYS">
          <children>
             <VBox alignment="CENTER" prefHeight="700.0" prefWidth="900.0">
                <children>
@@ -72,7 +40,7 @@
                                     <Image url="@../images/Design%20sem%20nome%20(6)%201.png" />
                                  </image>
                               </ImageView>
-                              <Button fx:id="sairB" layoutX="3.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="142.0" prefWidth="143.0" style="-fx-background-color: transparent;" text="" />
+                              <Button fx:id="BSairDoApp" layoutX="3.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="142.0" prefWidth="143.0" style="-fx-background-color: transparent;" text="" />
                            </children>
                         </AnchorPane>
                      </children>
@@ -80,7 +48,7 @@
                         <Insets bottom="80.0" />
                      </VBox.margin>
                   </HBox>
-                  <Button fx:id="BListarUsuarios" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000">
+                  <Button fx:id="BListarUsuarios" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000" onAction="#handleListarUsuarios">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -88,7 +56,7 @@
                         <Insets bottom="20.0" top="20.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="BPromoverUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000">
+                  <Button fx:id="BPromoverUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000" onAction="#handlePromoverUsuario">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
@@ -96,7 +64,7 @@
                         <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BRebaixarUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000">
+                  <Button fx:id="BRebaixarUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000" onAction="#handleRebaixarUsuario">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
@@ -104,7 +72,7 @@
                         <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BRemoverUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000">
+                  <Button fx:id="BRemoverUsuario" mnemonicParsing="false" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000" onAction="#handleRemoverUsuario">
                      <VBox.margin>
                         <Insets bottom="120.0" />
                      </VBox.margin>
@@ -115,6 +83,6 @@
                </children>
             </VBox>
          </children>
-    </AnchorPane>
-  </children>
+      </AnchorPane>
+   </children>
 </VBox>
