--- a/src/main/resources/fxml/IndicadoresView.fxml
+++ b/src/main/resources/fxml/IndicadoresView.fxml
@@ -35,7 +35,7 @@
                         </ImageView>
                         <AnchorPane prefHeight="138.0" prefWidth="150.0">
                            <children>
-                              <ImageView fitHeight="150.0" fitWidth="165.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="18.0">
+                              <ImageView fx:id="IFechar" fitHeight="150.0" fitWidth="165.0" layoutY="18.0" onMouseClicked="#voltar" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="18.0">
                                  <image>
                                     <Image url="@/images/imagesMenu/Design sem nome (6) 1.png" />
                                  </image>
@@ -45,7 +45,7 @@
                         </AnchorPane>
                      </children>
                   </HBox>
-                  <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
+                  <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#cadastrarNovoIndicador" prefHeight="60.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
                      <VBox.margin>
                         <Insets top="100.0" />
                      </VBox.margin>
@@ -53,7 +53,7 @@
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BListarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
+                  <Button fx:id="BListarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#listarMeusIndicadores" prefHeight="60.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
                      <VBox.margin>
                         <Insets top="50.0" />
                      </VBox.margin>
